[project]
name = "expense-tracker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Eeshan Gupta", email = "eeshan.gupta@hotmail.com" }
]
dependencies = [
    "flet[all]>=0.80.5",
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop-light>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "com.pixnettechnosys"
product = "expense-tracker"
company = "Flet"
copyright = "Copyright (C) 2026 by Pixnet Technosys"

[tool.flet.app]
path = "src"

[tool.flet.android]
split_per_abi = true